a1/brendan_gordon/TEST_PROGRAMS/invalidtype/cecily_thomas/incorrect_assignment_type.min
var x: int;

x = "hello";
